--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "uuidv4": "^6.2.6",
     "web-vitals": "^1.1.0"
   },
